# Web-Scraper

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  chain.txt  config.txt  crawlchain.txt  crawlchain.txt.save  main.cpp  object.cpp  object.h  scraper.cpp  scraper.h
